CSDEV/objects/HAE_Case_Category_Assignment__mdt.object
<CustomObject>
    <description>HAE: This is used to assign the default category on auto creation of case.</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: This field denotes if the record is active for use or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HAE_Default_Category__c</fullName>
        <description>HAE: This is used to assign the default category value.</description>
        <label>Default Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Default_Region__c</fullName>
        <description>HAE: This field denotes the default region if region is not available.</description>
        <label>Default Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Category Assignment</label>
    <pluralLabel>Case Category Assignments</pluralLabel>
</CustomObject>